# DormitorySystem

./: CMakeLists.txt  dormitory.db  dormitory2.db  log.sql  readme.md
data/: dormitory - 副本 (2).db  dormitory - 副本.db  dormitory.db  dormitoryBK.db
docs/: README.md  cpp文件.md  功能.md  架构.md  说明文档.md
sqlite3/: shell.c  sqlite3.h
src/: Database.cpp  Database.h  Person.cpp  Person.h  User.cpp  User.h  UserManager.cpp  UserManager.h  create.sql  example_init.sql  globals.cpp  globals.h  main.cpp  specialPrint.cpp  specialPrint.h  tmp.cpp  tmp.sql
src/1/: txt
实验报告及开发文档/md/: 01 MAIN 主函数开发.md  02 DB 数据库模块函数开发.md  UM00 UserManager模块开发报告.md  UM02 宿舍管理功能.md  UM04 用户管理功能.md  UM06 报修处理与报表管理.md  UM07 学生功能.md
数据源/: accommodation_requests.sql  accommodation_requests.xlsx  check_in_out_records.sql  check_in_out_records.xlsx  dormitories.sql  dormitories.xlsx  repair_requests.sql  repair_requests.xlsx  rooms.sql  rooms.xlsx  sqlite_master.sql  sqlite_master.xlsx  sqlite_sequence.sql  sqlite_sequence.xlsx  student_rooms.sql  student_rooms.xlsx  users.sql  users.xlsx
数据源/sql/: accommodation_requests.sql  dormitories.sql  rooms.sql  student_rooms.sql  users.sql
数据源/xlsx/: accommodation_requests.xlsx  rooms.xlsx  sqlite_master.xlsx  student_rooms.xlsx
数据集/dataBackup/: dormitory.db
数据集/sql/: check_in_out_records.sql  repair_requests.sql  sqlite_master.sql  sqlite_sequence.sql
数据集/xlsx/: check_in_out_records.xlsx  dormitories.xlsx  repair_requests.xlsx  sqlite_sequence.xlsx  users.xlsx
文档/md/: UM03 房间管理功能.md  UM05 住宿管理功能.md  湖南大学实验报告.md
